# Insurance-data-AI-project

./: .gitignore  README.md  main.py  pyproject.toml
data/: dummy_nps_data.csv
data/processed/: extracted_data.csv
notebooks/: 01_dummy_data_generation.ipynb  02_data_analysis_and_kpi.ipynb
